added header info, nav to index

--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
 <body>
 <div id="page">
 
-  <div id="header">
 
+	<div id="header">
+		<img src="logo" />
+		<h1 id="titlename">Khalila Hughes</h1>
 
+	</div>	<!--end header-->
 
+	<ul id="navigation">
+		<li><a href="/">Home</a></li>
+		<li><a href="about.html">About</a></li>
+		<li><a href="work.html">Work</a></li>
+		<li><a href="connect.html">Connect</a></li>
+	</ul>	<!--end navigation-->
 
 
 
