--- a/about.html
+++ b/about.html
@@ -15,25 +15,37 @@
 <div id="page">
 
 	<div id="header">
-		<img src="logo"
+		<img src="logo" />
+		<h1 id="titlename">Khalila Hughes</h1>
 
-
+	</div>	<!--end header-->
+	
 	<ul id="navigation">
 		<li><a href="/">Home</a></li>
-		<li><a href="/">Work</a></li>
-		<li><a href="/">Connect</a></li>
-	</ul>
+		<li><a href="about.html">About</a></li>
+		<li><a href="work.html">Work</a></li>
+		<li><a href="connect.html">Connect</a></li>
+	</ul>	<!--end navigation-->
+
+	<div id="content">
+	
+		<div id="past">
+		<p></p>
+		
+		</div> <!--end past-->
+		
+
+		<div id="present">
+		</div>	<!--end present-->
 
 
+		<div id="future">
+		</div> <!--end future-->
+
+  </div>		<!--end content-->
 
 
-
-
-
-
-  </div>
-
-</div>
+</div> <!--end page-->
 
 </body>
 
