added some general and stats

--- a/about.html
+++ b/about.html
@@ -29,6 +29,20 @@
 
 	<div id="content">
 	
+		<div id="general">
+			<p>I enjoy making information accessible and easy to digest.</p>
+			<p>I’m a compulsive organizer (er, at least in the digital sense, don’t ever ask to look inside my closets). 
+				I believe it should be easy for people to find what they need to find, when they don’t even know that they are looking for it.</p>
+		</div>  		<!--end general-->
+
+		<div id="stats">
+			<ul>
+				<li>LA native, current Chicago resident (okay, the suburbs, but it still counts)</li>
+				<li>Avid reader</li>
+				<li>Cat lover (as long as they don't shed) and dog lover (the non-slobbering varieties)</li>
+			</ul>
+		</div> 	<!--end stats-->
+
 		<div id="past">
 		<p></p>
 		
