added connect short section

--- a/about.html
+++ b/about.html
@@ -56,6 +56,10 @@
 		<div id="future">
 		</div> <!--end future-->
 
+	<div id ="connect-short">
+	</div>	<!--end connect-short-->
+
+
   </div>		<!--end content-->
 
 
