added viewport meta

--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
 <head>
 
   <meta charset="utf-8" />
-  <title>Khalila Hughes</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+ 
+	<title>Khalila Hughes</title>
   
   <link rel="stylesheet" type="text/css" media="screen, print" href="/css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css" />
