added more divs to index, duplicate commit 2?

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 
-  <meta charset="utf-8" />
-  <title>Khalila Hughes</title>
+  	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+ <title>Khalila Hughes</title>
   
   <link rel="stylesheet" type="text/css" media="screen, print" href="/css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css" />
@@ -17,25 +18,39 @@
 
 	<div id="header">
 		<img src="logo" />
-		<h1 id="titlename">Khalila Hughes</h1>
+		<h1 id="titlename"><a href="index.html">Khalila Hughes</a></h1>
 
 	</div>	<!--end header-->
 
-	<ul id="navigation">
+	<ul id="top-nav">
 		<li><a href="/">Home</a></li>
 		<li><a href="about.html">About</a></li>
 		<li><a href="work.html">Work</a></li>
 		<li><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 
+	<div id="content-body">
 
 
-<div id ="connect-short">
+		<div id="about">
+		
+		</div> <!--end about-->
+
+	<div class="short-works">
+
+	<div> <!--end short-works"-->
+
+
+	<div id ="connect-short">
 	</div>	<!--end connect-short-->
 
-  </div>
+	<div id ="footer"
+	</div> <!--end footer-->
 
-</div>
+	</div> <!--end content-body-->
+  
+
+</div> <!--end page-->
 
 </body>
 
