added blurb class to index and adjectives and nouns to about

--- a/about.html
+++ b/about.html
@@ -37,6 +37,32 @@
 				I believe it should be easy for people to find what they need to find, when they don’t even know that they are looking for it.</p>
 		</div>  		<!--end general-->
 
+		<div class="adjectives">
+			<ul>
+				<li>Observant</li>
+				<li>Analytical</li>
+				<li>Creative</li>
+				<li>Adaptable</li>
+				<li>Thorough</li>
+			</ul>
+		</div>
+		<div class="nouns">
+			<ul>
+				<li>Problem-solver</li>
+				<li>Team-player</li>
+				<li>Planner</li>
+				<li>Organizer</li>
+				<li>
+			</ul>
+				
+		</div>
+
+		<!-- necessary? <div class="together">
+			<p> So, if we put the adjectives and nouns together, basically, I'm just the person you're looking for, right?</p>
+			<p> In case that's not enough, here's a little more. I have a (Extensive) background in business setting, so I know...
+		</div> -->
+
+
 		<div id="stats">
 			<ul>
 				<li>LA native, current Chicago resident (okay, the suburbs, but it still counts)</li>
