added verbs to blurb, added blurb to about, added more info to about

--- a/about.html
+++ b/about.html
@@ -29,9 +29,20 @@
 		<li><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 
-	<div id="content">
+	<div id="content-body">
 	
-		<div id="general">
+	<div id="about">
+		<p class="blurb"> Hi, my name is Khalila.</p>
+			<ul>
+				<li> I design...</li>
+				<li> I write...</li>
+				<li> I ...</li>
+			</ul>
+			<p>Sufficiently tantalized? Read on/Learn more...</p>
+		</div> <!--end about-->
+	
+
+	<div id="general">
 			<p>I enjoy making information accessible and easy to digest.</p>
 			<p>I’m a compulsive organizer (er, at least in the digital sense, don’t ever ask to look inside my closets). 
 				I believe it should be easy for people to find what they need to find, when they don’t even know that they are looking for it.</p>
@@ -39,7 +50,7 @@
 
 		<div class="adjectives">
 			<ul>
-				<li>Observant</li>
+				<li>Observant*</li>
 				<li>Analytical</li>
 				<li>Creative</li>
 				<li>Adaptable</li>
@@ -52,14 +63,17 @@
 				<li>Team-player</li>
 				<li>Planner</li>
 				<li>Organizer</li>
-				<li>
+				<li>Communicator</li>
 			</ul>
 				
 		</div>
 
 		<!-- necessary? <div class="together">
 			<p> So, if we put the adjectives and nouns together, basically, I'm just the person you're looking for, right?</p>
-			<p> In case that's not enough, here's a little more. I have a (Extensive) background in business setting, so I know...
+			<p> In case that's not enough, here's a little more.</p>
+			<p> I have a (Extensive) background in business setting, so I know...</p>
+			<p> internal communications ; I believe that design is a function of communication. People absorb and react to information more positively 
+					when it is beautifully formatted, creatively displayed, and very well-written. </p>
 		</div> -->
 
 
