--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
 
 
 		<div id="about">
-			<p class="blurb"> 
+			<p class="blurb"> Hi, my name is Khalila.</p>
+			<ul>
+				<li> I design...</li>
+				<li> I write...</li>
+				<li> I ...</li>
+			</ul>
+			<p>Sufficiently tantalized? Read on/Learn more...</p>
 		</div> <!--end about-->
 
 	<div class="short-works">
