--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</div>	<!--end header-->
 
 	<ul id="top-nav">
-		<li><a href="/">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
 		<li><a href="work.html">Work</a></li>
 		<li><a href="connect.html">Connect</a></li>
