brief text changes

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 				<li> I write...</li>
 				<li> I ...</li>
 			</ul>
-			<p>Sufficiently tantalized? Read on/Learn more...</p>
+	
 		</div> <!--end about-->
 	
 
@@ -72,8 +72,8 @@
 			<p> So, if we put the adjectives and nouns together, basically, I'm just the person you're looking for, right?</p>
 			<p> In case that's not enough, here's a little more.</p>
 			<p> I have a (Extensive) background in business setting, so I know...</p>
-			<p> internal communications ; I believe that design is a function of communication. People absorb and react to information more positively 
-					when it is beautifully formatted, creatively displayed, and very well-written. </p>
+			<p> internal communications ; I believe that design is a function of communication. Whatever the format, people absorb and 
+					react to information more positively when it is beautifully formatted, creatively displayed, and very well-written. </p>
 		</div> -->
 
 
