--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
  
 	<title>Khalila Hughes</title>
   
-  <link rel="stylesheet" type="text/css" media="screen, print" href="/css/reset.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css" />
-  <link rel="stylesheet" type="text/css" media="print" href="/css/print.css" />
+  <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+  <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 
 </head>
 
@@ -23,15 +23,15 @@
 	</div>	<!--end header-->
 	
 	<ul id="navigation">
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="work.html">Work</a></li>
-		<li><a href="connect.html">Connect</a></li>
+		<li class="home"><a href="index.html">Home</a></li>
+		<li class="about"><a href="about.html">About</a></li>
+		<li class="work"><a href="work.html">Work</a></li>
+		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 
 	<div id="content-body">
 	
-	<div id="about">
+	<div id="sidebar">
 		<p class="blurb"> Hi, my name is Khalila.</p>
 			<ul>
 				<li> I design...</li>
