--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
  <title>Khalila Hughes</title>
   
-  <link rel="stylesheet" type="text/css" media="screen, print" href="/css/reset.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css" />
-  <link rel="stylesheet" type="text/css" media="print" href="/css/print.css" />
+  <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+  <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 
 </head>
 
@@ -32,7 +32,7 @@
 	<div id="content-body">
 
 
-		<div id="about">
+		<div id="sidebar">
 			<p class="blurb"> Hi, my name is Khalila.</p>
 			<ul>
 				<li> I design...</li>
