--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<img src="logo" />
 		<h1 id="titlename"><a href="index.html">Khalila Hughes</a></h1>
 
-	
+		</div>	<!--end header-->
 
 	<ul id="top-nav">
 		<li><a href="index.html">Home</a></li>
@@ -29,12 +29,12 @@
 		<li><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 
-	</div>	<!--end header-->
+
 	
 
 	<div id="content-body">
 
-
+	<div id="content">
 		<div id="sidebar">
 			<p class="blurb"> Hi, my name is Khalila.</p>
 			<ul>
@@ -56,6 +56,7 @@
 	<div id ="footer"
 	</div> <!--end footer-->
 
+	</div> <!--end content-->
 	</div> <!--end content-body-->
   
 
