--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
 	
 		</div> <!--end about-->
 	
+	<div id="content">
 
 	<div id="general">
 			<p>I enjoy making information accessible and easy to digest.</p>
@@ -101,8 +102,8 @@
 	<div id ="connect-short">
 	</div>	<!--end connect-short-->
 
-
-  </div>		<!--end content-->
+  </div>  	<!--end content-->
+  </div>		<!--end content-body-->
 
 
 </div> <!--end page-->
