--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
 	<div id="header">
 		<img src="logo" />
-		<h1 id="titlename">Khalila Hughes</h1>
+		<h1>Khalila Hughes</h1>
 
 	</div>	<!--end header-->
 	
