--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<div id="header">
 		<img src="logo" />
-		<h1 id="titlename"><a href="index.html">Khalila Hughes</a></h1>
+		<h1><a href="index.html">Khalila Hughes</a></h1>
 
 		</div>	<!--end header-->
 
