added logo to index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 	<div id="header">
-		<img src="logo" />
+		<img src="media/img/kh-logo.jpg" alt="Khalila Hughes logo"/>
 		<h1><a href="index.html">Khalila Hughes</a></h1>
 
 		</div>	<!--end header-->
