added logo to about, added nav classes to about, small change in css

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <div id="page">
 
 	<div id="header">
-		<img src="logo" />
+		<img src="media/img/kh-logo.jpg" alt="Khalila Hughes logo"/>
 		<h1>Khalila Hughes</h1>
 
 	</div>	<!--end header-->
