--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		</div>	<!--end header-->
 
 	<ul id="top-nav">
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="work.html">Work</a></li>
-		<li><a href="connect.html">Connect</a></li>
+		<li class="home"><a href="index.html">Home</a></li>
+		<li class="about"><a href="about.html">About</a></li>
+		<li class="work"><a href="work.html">Work</a></li>
+		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 
 
