added link to header h1

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
 	<div id="header">
 		<img src="media/img/kh-logo.jpg" alt="Khalila Hughes logo"/>
-		<h1>Khalila Hughes</h1>
+		<h1><a href="index.html">Khalila Hughes</a></h1>
 
 	</div>	<!--end header-->
 	
