--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		</div>	<!--end header-->
 
-	<ul id="top-nav">
+	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
 		<li class="about"><a href="about.html">About</a></li>
 		<li class="work"><a href="work.html">Work</a></li>
