--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 <body>
 <div id="page">
 
+	<div id ="banner">
+<p>&nbsp;</p>
+	</div>	<!--end banner-->
 
 	<div id="header">
 		<img src="media/img/kh-logo.jpg" alt="Khalila Hughes logo"/>
-		<h1><a href="index.html">Khalila Hughes</a></h1>
+		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
 
 		</div>	<!--end header-->
 
