--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
 	
 
-	<div id="content-body">
+<!--	<div id="content-body"> -->
 
-	<div id="content">
 		<div id="sidebar">
 			<p class="blurb"> Hi, my name is Khalila.</p>
 			<ul>
@@ -46,7 +45,9 @@
 				<li> I ...</li>
 			</ul>
 			<p>Sufficiently tantalized? Read on/Learn more...</p>
-		</div> <!--end about-->
+		</div> <!--end sidebar-->
+	
+<div id="content">
 
 	<div class="short-works">
 
