--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
 
 	
-
-<!--	<div id="content-body"> -->
+<div id="content-body"> 
 
 		<div id="sidebar">
 			<p class="blurb"> Hi, my name is Khalila.</p>
