added shortworks divs in content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
 	
 <div id="content">
 
-	<div class="short-works">
+	<div class="shortworks">
+
+	<div> <!--end short-works"-->
+
+	<div class="shortworks">
+
+	<div> <!--end short-works"-->
+
+	<div class="shortworks">
 
 	<div> <!--end short-works"-->
 
@@ -58,9 +66,10 @@
 
 	<div id ="footer"
 	</div> <!--end footer-->
+	
+</div> <!--end content-->
 
-	</div> <!--end content-->
-	</div> <!--end content-body-->
+</div> <!--end content-body-->
   
 
 </div> <!--end page-->
