added shortworks sections

--- a/index.html
+++ b/index.html
@@ -49,17 +49,18 @@
 <div id="content">
 
 	<div class="shortworks">
-  <p> Design</p>
+    <p> Design</p>
 
-	<div> <!--end short-works"-->
+	</div> <!--end short-works"-->
+
+	<div class="shortworks">
+    <p> Design</p>
+	
+  </div> <!--end short-works"-->
 
 	<div class="shortworks">
 
-	<div> <!--end short-works"-->
-
-	<div class="shortworks">
-
-	<div> <!--end short-works"-->
+	</div> <!--end short-works"-->
 
 
 	<div id ="connect-short">
