added everything in between text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<ul>
 				<li> I design...</li>
 				<li> I write...</li>
-				<li> I ...</li>
+				<li> and everything in between. Me in words and pictures</li>
 			</ul>
 			<p>Sufficiently tantalized? Read on/Learn more...</p>
 		</div> <!--end sidebar-->
