--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 
 <body>
 <div id="page">
-
-
 	
 <div id="header">
-		<img src="media/img/kh-logo.jpg" alt="Khalila Hughes logo"/>
+		<img src="media/img/kh-logo2.jpg" alt="Khalila Hughes logo"/>
 		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
 
 		</div>	<!--end header-->
