--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		</div>	<!--end header-->
 
 	<ul id="navigation">
-		<li class="home"><a href="index.html">Home</a></li>
-		<li class="about"><a href="about.html">About</a></li>
-		<li class="work"><a href="work.html">Work</a></li>
-		<li	class="connect"><a href="connect.html">Connect</a></li>
+		<li class="home"><a href="#">Home</a></li>
+		<li class="about"><a href="#">About</a></li>
+		<li class="work"><a href="#">Work</a></li>
+		<li	class="connect"><a href="#">Connect</a></li>
 	</ul>	<!--end navigation-->
 
 
