added skill divs to sidebar

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		</div>	<!--end header-->
 
 	<ul id="navigation">
-		<li class="home"><a href="#">Home</a></li>
-		<li class="about"><a href="#">About</a></li>
-		<li class="work"><a href="#">Work</a></li>
-		<li	class="connect"><a href="#">Connect</a></li>
+		<li class="home"><a href="index.html">Home</a></li>
+		<li class="about"><a href="about.html">About</a></li>
+		<li class="work"><a href="work.html">Work</a></li>
+		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 
 
@@ -42,6 +42,33 @@
 				<li> and everything in between. Me in words and pictures</li>
 			</ul>
 			<p>Sufficiently tantalized? Read on/Learn more...</p>
+
+			<div class="circle-1">
+				<p> Skill 1</p>
+			</div> <!--end circle-1-->
+
+			<div class="square-1">
+				<p> Skill 2</p>
+			</div> <!--end square-1-->
+			
+			<div class="circle-2">
+				<p> Skill 3</p>
+			</div> <!--end circle-2-->
+
+			<div class="square-2">
+				<p> Skill 4</p>
+			</div> <!--end circle-1-->
+
+			<div class="circle-3">
+				<p> Skill 5</p>
+			</div> <!--end circle-3-->
+
+			<div class="square-3">
+				<p> Skill 6</p>
+			</div> <!--end square-3-->
+
+
+
 		</div> <!--end sidebar-->
 	
 <div id="content">
