added skillshapes container and css

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 			</ul>
 			<p>Sufficiently tantalized? Read on/Learn more...</p>
 
+		<div id="skillshapes">
+
 			<div class="circle-1">
 				<p> Skill 1</p>
 			</div> <!--end circle-1-->
@@ -70,24 +72,24 @@
 
 
 	
-
+		</div> <!--end skillshapes-->
 
 		</div> <!--end sidebar-->
 	
 <div id="content">
 
 	<div class="shortworks">
-    <p> Design</p>
+    <p> Type 1</p>
 
 	</div> <!--end short-works"-->
 
 	<div class="shortworks">
-    <p> Design</p>
+    <p> Type 2</p>
 	
   </div> <!--end short-works"-->
 
 	<div class="shortworks">
-
+   	<p> Type 2</p>
 	</div> <!--end short-works"-->
 
 
