added sample image and styles div.shortworks

--- a/index.html
+++ b/index.html
@@ -79,17 +79,20 @@
 <div id="content">
 
 	<div class="shortworks">
-    <p> Type 1</p>
+    <h3> Type 1</h3>
+	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 
 	</div> <!--end short-works"-->
 
 	<div class="shortworks">
-    <p> Type 2</p>
+    <h3> Type 2</h3>
+	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	
   </div> <!--end short-works"-->
 
 	<div class="shortworks">
-   	<p> Type 2</p>
+	<h3> Type 3</h3>
+	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	</div> <!--end short-works"-->
 
 
