changed nav colors, added lead-line

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 
 	
 <div id="content-body"> 
+<div id="big-blurb">
+<p class "lead-line"> Beautifully crafted content and design for all media.</p>
+
+
+</div> <!--end big-blurb-->
 
 		<div id="sidebar">
 			<p class="blurb"> Hi, my name is Khalila.</p>
