revised sidebar blurb text

--- a/index.html
+++ b/index.html
@@ -33,20 +33,17 @@
 
 	
 <div id="content-body"> 
+
 <div id="big-blurb">
-<p class "lead-line"> Beautifully crafted content and design for all media.</p>
+<p id= "lead-line"> Beautifully crafted content and design for all media.</p>
 
 
 </div> <!--end big-blurb-->
 
 		<div id="sidebar">
-			<p class="blurb"> Hi, my name is Khalila.</p>
-			<ul>
-				<li> I design...</li>
-				<li> I write...</li>
-				<li> and everything in between. Me in words and pictures</li>
-			</ul>
-			<p>Sufficiently tantalized? Read on/Learn more...</p>
+			<p class="blurb"> Hi, my name is Khalila.
+			 I am a designer, writer, and editor. Me in words and pictures. </p>
+			<p class="normal">Sufficiently tantalized? Read on/Learn more...</p>
 
 		<div id="skillshapes">
 
