big blurb color changes and moving div down

--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
 <div id="content-body"> 
 
 <div id="big-blurb">
-<p id= "lead-line"> Beautifully crafted content and design for all media.</p>
+<p> Beautifully crafted content and design for all media.</p>
 
 
 </div> <!--end big-blurb-->
 
 		<div id="sidebar">
 			<p class="blurb"> Hi, my name is Khalila.
-			 I am a designer, writer, and editor. Me in words and pictures. </p>
-			<p class="normal">Sufficiently tantalized? Read on/Learn more...</p>
+			 I am a designer, writer, and editor. Me in words and pictures. </br> Sufficiently tantalized? Read on/Learn more...</p>
 
 		<div id="skillshapes">
 
