added top banner back in, started transition to fluid

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 
 
 <body>
+
+<div id="topblock">
+<p> &nbsp;</p>
+</div> <!-- end topblock-->
+
 <div id="page">
-	
+
+
+
 <div id="header">
 		<img src="media/img/kh-logo2.jpg" alt="Khalila Hughes logo"/>
 		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
