changed logo, added png logo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <div id="header">
-		<img src="media/img/kh-logo2.jpg" alt="Khalila Hughes logo"/>
+		<img src="media/img/kh-logolong.jpg" alt="Khalila Hughes logo"/>
 		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
 
 		</div>	<!--end header-->
