changed blurb text and style

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="content-body"> 
 
 <div id="big-blurb">
-<p> Beautifully crafted content and design for all media.</p>
+<p> I craft beautiful content and design for all media.</p>
 
 
 </div> <!--end big-blurb-->
