--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 </head>
 
 
-
 <body>
 
-<div id="topblock">
-<p> &nbsp;</p>
-</div> <!-- end topblock-->
+
+
 
 <div id="page">
 
-
+<div id="topblock">
+<p> &nbsp;</p>
+</div> <!-- end topblock--> 
 
 <div id="header">
-		<img src="media/img/kh-logolong.png" alt="Khalila Hughes"/>
+		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
 		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
 
 		</div>	<!--end header-->
@@ -49,7 +49,7 @@
 
 		<div id="sidebar">
 			<p class="blurb"> Hi, my name is Khalila.
-			 I am a designer, writer, and editor. Me in words and pictures. </br> Sufficiently tantalized? Read on/Learn more...</p>
+			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p>
 
 		<div id="skillshapes">
 
@@ -66,7 +66,8 @@
 <div class="square-2">
 				<p> Skill 4</p>
 			</div> <!--end circle-1-->
-			<div class="circle-2">
+			
+<div class="circle-2">
 				<p> Skill 3</p>
 			</div> <!--end circle-2-->
 
@@ -74,15 +75,16 @@
 <div class="circle-3">
 				<p> Skill 5</p>
 			</div> <!--end circle-3-->
-			<div class="square-3">
+			
+		
+		<!-- <div class="square-3">
 				<p> Skill 6</p>
-			</div> <!--end square-3-->
+			</div> end square-3 -->  
 
 
-	
-		</div> <!--end skillshapes-->
+		</div> <!-- end skillshapes -->
 
-		</div> <!--end sidebar-->
+		</div> <!-- end sidebar -->
 	
 <div id="content">
 
@@ -107,13 +109,14 @@
 	<div id ="connect-short">
 	</div>	<!--end connect-short-->
 
-	<div id ="footer"
-	</div> <!--end footer-->
+
 	
 </div> <!--end content-->
 
 </div> <!--end content-body-->
   
+	<div id ="footer" >
+	</div> <!--end footer-->
 
 </div> <!--end page-->
 
