removed small paragraph blurb

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 </div> <!--end big-blurb-->
 
 		<div id="sidebar">
-			<p class="blurb"> Hi, my name is Khalila.
-			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p>
+			<!-- <p class="blurb"> Hi, my name is Khalila.
+			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p> -->
 
 		<div id="skillshapes">
 
