removed shortworks divs, added print, digital works divs and layout styles

--- a/index.html
+++ b/index.html
@@ -88,23 +88,23 @@
 	
 <div id="content">
 
-	<div class="shortworks">
+	<div id="short-print">
     <h3> Type 1</h3>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 
-	</div> <!--end short-works"-->
+	</div> <!--end short-print"-->
 
-	<div class="shortworks">
+	<div id="short-digital">
     <h3> Type 2</h3>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	
-  </div> <!--end short-works"-->
+  </div> <!--end short-digital"-->
 
-	<div class="shortworks">
+<!--	<div class="shortworks">
 	<h3> Type 3</h3>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	</div> <!--end short-works"-->
-
+-->
 
 	<div id ="connect-short">
 	</div>	<!--end connect-short-->
