added style to footer, changed print, digital widths, added more space between skills

--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
     <h3> Type 1</h3>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 
-	</div> <!--end short-print"-->
+	</div> <!--end short-print-->
 
 	<div id="short-digital">
     <h3> Type 2</h3>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	
-  </div> <!--end short-digital"-->
+  </div> <!--end short-digital-->
 
 <!--	<div class="shortworks">
 	<h3> Type 3</h3>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
-	</div> <!--end short-works"-->
+	</div> 
 -->
 
 	<div id ="connect-short">
@@ -116,6 +116,7 @@
 </div> <!--end content-body-->
   
 	<div id ="footer" >
+<p> copyright Khalila Hughes 2013 </p>
 	</div> <!--end footer-->
 
 </div> <!--end page-->
