added more styles to short print and digital, added h2 tag and style

--- a/index.html
+++ b/index.html
@@ -89,13 +89,14 @@
 <div id="content">
 
 	<div id="short-print">
-    <h3> Type 1</h3>
+    <h2>Print</h2>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 
 	</div> <!--end short-print-->
 
 	<div id="short-digital">
-    <h3> Type 2</h3>
+      <h2>Digital</h2>
+
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	
   </div> <!--end short-digital-->
@@ -104,12 +105,12 @@
 	<h3> Type 3</h3>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	</div> 
--->
+
 
 	<div id ="connect-short">
 	</div>	<!--end connect-short-->
 
-
+-->
 	
 </div> <!--end content-->
 
