added mainbar style and html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 </div> <!--end big-blurb-->
 
-		<div id="sidebar">
+		<div id="mainbar">
 			<!-- <p class="blurb"> Hi, my name is Khalila.
 			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p> -->
 
