cleaned up html, made center skill longer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 
-
 	
 <div id="content-body"> 
 
@@ -65,7 +64,7 @@
 
 <div class="square-2">
 				<p> Skill 4</p>
-			</div> <!--end circle-1-->
+			</div> <!--end square-2-->
 			
 <div class="circle-2">
 				<p> Skill 3</p>
@@ -75,16 +74,11 @@
 <div class="circle-3">
 				<p> Skill 5</p>
 			</div> <!--end circle-3-->
-			
-		
-		<!-- <div class="square-3">
-				<p> Skill 6</p>
-			</div> end square-3 -->  
 
 
 		</div> <!-- end skillshapes -->
 
-		</div> <!-- end sidebar -->
+		</div> <!-- end mainbar -->
 	
 <div id="content">
 
