changed somethings around in work

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 			
 			<div class="square-1">
-				<p> Skill 2</p>
+				<p> Solution-focused</p>
 			</div> <!--end square-1-->
 
 
@@ -67,7 +67,7 @@
 			</div> <!--end square-2-->
 			
 <div class="circle-2">
-				<p> Skill 3</p>
+				<p> Future-proof</p>
 			</div> <!--end circle-2-->
 
 
