--- a/work.html
+++ b/work.html
@@ -85,20 +85,20 @@
 
 		</div> <!-- end sidebar -->
 	
-<div id="content">
+<div id="work-content">
 
-	<div id="short-print">
+	<div id="work-print">
     <h2>Print</h2>
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 
-	</div> <!--end short-print-->
+	</div> <!--end work-print-->
 
-	<div id="short-digital">
+	<div id="work-digital">
       <h2>Digital</h2>
 
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	
-</div> <!--end short-digital-->
+</div> <!--end work-digital-->
 	
 </div> <!--end content-->
 
