added updated styles to about.html

--- a/about.html
+++ b/about.html
@@ -16,30 +16,41 @@
 <body>
 <div id="page">
 
-	<div id="header">
-		<img src="media/img/kh-logo.jpg" alt="Khalila Hughes logo"/>
+<div id="topblock">
+<p> &nbsp;</p>
+</div> <!-- end topblock--> 
+
+<div id="header">
+		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
 		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
 
-	</div>	<!--end header-->
-	
+		</div>	<!--end header-->
+
 	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
 		<li class="about"><a href="about.html">About</a></li>
 		<li class="work"><a href="work.html">Work</a></li>
 		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
+	
 
-	<div id="content-body">
+<div id="content-body"> 
+
+<div id="big-blurb">
+<p> From conception through execution...</p>
+
+
+</div> <!--end big-blurb-->
+
 	
 	<div id="sidebar">
-		<p class="blurb"> Hi, my name is Khalila.</p>
+		<!-- <p class="blurb"> Hi, my name is Khalila.</p>
 			<ul>
 				<li> I design...</li>
 				<li> I write...</li>
 				<li> I ...</li>
-			</ul>
+			</ul> -->
 	
-		</div> <!--end about-->
 	</div> <!--end sidebar-->
 
 	<div id="content">
@@ -51,7 +62,7 @@
 
 	</div>  		<!--end general-->
 
-		<div class="adjectives">
+	<!--	<div class="adjectives">
 			<ul>
 				<li>Observant*</li>
 				<li>Analytical</li>
@@ -69,8 +80,7 @@
 				<li>Communicator</li>
 			</ul>
 				
-		</div>
-
+		</div>  --?>
 		<!-- necessary? <div class="together">
 			<p> So, if we put the adjectives and nouns together, basically, I'm just the person you're looking for, right?</p>
 			<p> In case that's not enough, here's a little more.</p>
@@ -88,25 +98,14 @@
 			</ul>
 		</div> 	<!--end stats-->
 
-		<div id="past">
-		<p></p>
-		
-		</div> <!--end past-->
-		
-
-		<div id="present">
-		</div>	<!--end present-->
-
-
-		<div id="future">
-		</div> <!--end future-->
-
-	<div id ="connect-short">
-	</div>	<!--end connect-short-->
+	
 
   </div>  	<!--end content-->
   </div>		<!--end content-body-->
 
+<div id ="footer" >
+<p> copyright Khalila Hughes 2013 </p>
+	</div> <!--end footer-->
 
 </div> <!--end page-->
 
