--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
 <div id="content-body"> 
 
 <div id="big-blurb">
-<p> From conception through execution, your project ...</p>
+<p> From conception through execution...</p>
 
 
 </div> <!--end big-blurb-->
