changed basic footer text

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </div> <!--end content-body-->
   
 	<div id ="footer" >
-<p> copyright Khalila Hughes 2013 </p>
+<p> Connect with me on... </p>
 	</div> <!--end footer-->
 
 </div> <!--end page-->
