changed skill names

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div id="skillshapes">
 
 			<div class="circle-1">
-				<p> Skill 1</p>
+				<p> Something Cool</p>
 			</div> <!--end circle-1-->
 
 			
@@ -63,16 +63,16 @@
 
 
 <div class="square-2">
-				<p> Skill 4</p>
+				<p> Interesting</p>
 			</div> <!--end square-2-->
 			
 <div class="circle-2">
-				<p> Future-proof</p>
+				<p> Future-proof*</p>
 			</div> <!--end circle-2-->
 
 
 <div class="circle-3">
-				<p> Skill 5</p>
+				<p> One More</p>
 			</div> <!--end circle-3-->
 
 
