--- a/work.html
+++ b/work.html
@@ -53,26 +53,26 @@
 		<div id="skillshapes">
 
 			<div class="circle-1">
-				<p> Skill 1</p>
+				<p> Something Cool</p>
 			</div> <!--end circle-1-->
 
 			
 			<div class="square-1">
-				<p> Skill 2</p>
+				<p> Solution-focused</p>
 			</div> <!--end square-1-->
 
 
 <div class="square-2">
-				<p> Skill 4</p>
+				<p> Interesting</p>
 			</div> <!--end circle-1-->
 			
 <div class="circle-2">
-				<p> Skill 3</p>
+				<p> Future-proof*</p>
 			</div> <!--end circle-2-->
 
 
 <div class="circle-3">
-				<p> Skill 5</p>
+				<p> One More</p>
 			</div> <!--end circle-3-->
 			
 		
