--- a/about.html
+++ b/about.html
@@ -56,7 +56,8 @@
 	<div id="content">
 
 	<div id="general">
-			<p>I enjoy making information accessible and easy to digest.</p>
+  <h3> A little about me </h3>			
+    <p>I enjoy making information accessible and easy to digest.</p>
 			<p>I’m a compulsive organizer (er, at least in the digital sense, don’t ever ask to look inside my closets). 
 				I believe it should be easy for people to find what they need to find, when they don’t even know that they are looking for it.</p>	
 
@@ -91,11 +92,17 @@
 
 
 		<div id="stats">
-			<ul>
+  
+    <ul>
 				<li>LA native, current Chicago resident (okay, the suburbs, but it still counts)</li>
 				<li>Avid reader</li>
 				<li>Cat lover (as long as they don't shed) and dog lover (the non-slobbering varieties)</li>
-			</ul>
+			</ul> 
+  <h3> Technical Stats</h3>	
+  <ul> 
+  <li> Languages </li>
+  <li> The other languages (html, css, etc.) </li>
+  </ul>	
 		</div> 	<!--end stats-->
 
 	
