--- a/about.html
+++ b/about.html
@@ -57,34 +57,39 @@
 
 	<div id="general">
   <h3> A little about me </h3>			
-    <p>I enjoy making information accessible and easy to digest.</p>
-			<p>I’m a compulsive organizer (er, at least in the digital sense, don’t ever ask to look inside my closets). 
-				I believe it should be easy for people to find what they need to find, when they don’t even know that they are looking for it.</p>	
+    <p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
+Communication and Information Design at Illinois Institute of Technology. </p>
+<p>I strongly believe that information should be accessible and easy to digest, no matter what the format. I apply
+this philosophy to everything I do. Creative problem-solving is one of my strengths, especially when the problem may be vocalized as 
+as simple as "This doesn't sound/look right" or "I'm not sure what's wrong." </p>
+
+<p> Goal-oriented and problem solving approach to design and content. Internal communication and external.
+I work very well collaboratively and 
+I've worked in business education for almost seven years, so I know what 
+Take information, data, images, and almost any kind of content you can think of, and transform it into something that 
+is just as easy to use, and look at as it is to understand.
+
+<p>I've  worked on many types of projects, either design, content, or a combination of the two (or both). 
+Here is a sampling of the types of projects I've done: 
+<ul>
+<li>Holiday cards <span class="digital"> digital </span>)</li>
+<li>Invitations <span class="digital">digital</span> <span class="print">print</span></li>
+<li>PowerPoint presentation templates <span class="digital">digital</span></li>
+
+<p>I've been described as observant, analytical, creative, adaptable, and thorough. I am a problem solver, team-player, 
+planner, organizer, and communicator,
+</ul>
+
+</p>
+<p>I am currently </p>
+<p>I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When I'm not creating beautiful
+content and design for other people, I am reading, writing, or going on city hikes.
+</p>
 
 	</div>  		<!--end general-->
-
-	<!--	<div class="adjectives">
-			<ul>
-				<li>Observant*</li>
-				<li>Analytical</li>
-				<li>Creative</li>
-				<li>Adaptable</li>
-				<li>Thorough</li>
-			</ul>
-		</div>
-		<div class="nouns">
-			<ul>
-				<li>Problem-solver</li>
-				<li>Team-player</li>
-				<li>Planner</li>
-				<li>Organizer</li>
-				<li>Communicator</li>
-			</ul>
 				
 		</div>  --?>
 		<!-- necessary? <div class="together">
-			<p> So, if we put the adjectives and nouns together, basically, I'm just the person you're looking for, right?</p>
-			<p> In case that's not enough, here's a little more.</p>
 			<p> I have a (Extensive) background in business setting, so I know...</p>
 			<p> internal communications ; I believe that design is a function of communication. Whatever the format, people absorb and 
 					react to information more positively when it is beautifully formatted, creatively displayed, and very well-written. </p>
@@ -92,12 +97,8 @@
 
 
 		<div id="stats">
-  
-    <ul>
-				<li>LA native, current Chicago resident (okay, the suburbs, but it still counts)</li>
-				<li>Avid reader</li>
-				<li>Cat lover (as long as they don't shed) and dog lover (the non-slobbering varieties)</li>
-			</ul> 
+  <p> More facts about me</p>
+				
   <h3> Technical Stats</h3>	
   <ul> 
   <li> Languages </li>
