more about revisions, removed unnecessary div

--- a/about.html
+++ b/about.html
@@ -42,16 +42,6 @@
 
 </div> <!--end big-blurb-->
 
-	
-	<div id="sidebar">
-		<!-- <p class="blurb"> Hi, my name is Khalila.</p>
-			<ul>
-				<li> I design...</li>
-				<li> I write...</li>
-				<li> I ...</li>
-			</ul> -->
-	
-	</div> <!--end sidebar-->
 
 	<div id="content">
 
@@ -59,51 +49,37 @@
   <h3> A little about me </h3>			
     <p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
 Communication and Information Design at Illinois Institute of Technology. </p>
-<p>I strongly believe that information should be accessible and easy to digest, no matter what the format. I apply
+<p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
 this philosophy to everything I do. Creative problem-solving is one of my strengths, especially when the problem may be vocalized as 
-as simple as "This doesn't sound/look right" or "I'm not sure what's wrong." </p>
+simple as "This doesn't sound/look right" or "I'm not sure what's wrong." </p>
 
-<p> Goal-oriented and problem solving approach to design and content. Internal communication and external.
-I work very well collaboratively and 
-I've worked in business education for almost seven years, so I know what 
-Take information, data, images, and almost any kind of content you can think of, and transform it into something that 
-is just as easy to use, and look at as it is to understand.
+<p> With a goal-oriented approach to drafting design and content, I enjoy transforming 
+I work very well collaboratively and  I believe that design is a function of communication. Whatever the format, people absorb and 
+react to information more positively when it is beautifully formatted, creatively displayed, and very well-written.  </p>
+<p> In addition to English, I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When I'm not creating beautiful
+content and design for other people, I am reading, writing, or going on city hikes. 
+</p>
 
-<p>I've  worked on many types of projects, either design, content, or a combination of the two (or both). 
+<p>I've worked on many types of projects, either design, content, or a combination of the two (or both).  
 Here is a sampling of the types of projects I've done: 
 <ul>
 <li>Holiday cards <span class="digital"> digital </span>)</li>
 <li>Invitations <span class="digital">digital</span> <span class="print">print</span></li>
 <li>PowerPoint presentation templates <span class="digital">digital</span></li>
-
-<p>I've been described as observant, analytical, creative, adaptable, and thorough. I am a problem solver, team-player, 
-planner, organizer, and communicator,
 </ul>
-
 </p>
-<p>I am currently </p>
-<p>I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When I'm not creating beautiful
-content and design for other people, I am reading, writing, or going on city hikes.
+<p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as a
+all around professional.*
 </p>
 
 	</div>  		<!--end general-->
 				
 		</div>  --?>
-		<!-- necessary? <div class="together">
-			<p> I have a (Extensive) background in business setting, so I know...</p>
-			<p> internal communications ; I believe that design is a function of communication. Whatever the format, people absorb and 
-					react to information more positively when it is beautifully formatted, creatively displayed, and very well-written. </p>
-		</div> -->
+
 
 
 		<div id="stats">
-  <p> More facts about me</p>
-				
-  <h3> Technical Stats</h3>	
-  <ul> 
-  <li> Languages </li>
-  <li> The other languages (html, css, etc.) </li>
-  </ul>	
+ 
 		</div> 	<!--end stats-->
 
 	
