revised about and about styles, added text to work

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
  
 	<title>Khalila Hughes</title>
-  
+<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
   <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
@@ -50,23 +50,14 @@
     <p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
 Communication and Information Design at Illinois Institute of Technology. </p>
 <p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
-this philosophy to everything I do. Creative problem-solving is one of my strengths, especially when the problem may be vocalized as 
-simple as "This doesn't sound/look right" or "I'm not sure what's wrong." </p>
+this philosophy to everything I do. <span class="highlight-blue">Creative problem-solving is one of my strengths</span>, especially when the problem 
+may be vocalized as simple as "This doesn't sound/look right" or "I'm not sure what's wrong." </p>
 
 <p> With a goal-oriented approach to drafting design and content, I enjoy transforming 
-I work very well collaboratively and  I believe that design is a function of communication. Whatever the format, people absorb and 
+I work very well collaboratively and  <span class="highlight-green">I believe that design is a function of communication</span>. Whatever the format, people absorb and 
 react to information more positively when it is beautifully formatted, creatively displayed, and very well-written.  </p>
-<p> In addition to English, I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When I'm not creating beautiful
+<p> In addition to native mastery of English, I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When I'm not creating beautiful
 content and design for other people, I am reading, writing, or going on city hikes. 
-</p>
-
-<p>I've worked on many types of projects, either design, content, or a combination of the two (or both).  
-Here is a sampling of the types of projects I've done: 
-<ul>
-<li>Holiday cards <span class="digital"> digital </span>)</li>
-<li>Invitations <span class="digital">digital</span> <span class="print">print</span></li>
-<li>PowerPoint presentation templates <span class="digital">digital</span></li>
-</ul>
 </p>
 <p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as a
 all around professional.*
@@ -74,15 +65,9 @@ all around professional.*
 
 	</div>  		<!--end general-->
 				
-		</div>  --?>
+		</div> 
 
 
-
-		<div id="stats">
- 
-		</div> 	<!--end stats-->
-
-	
 
   </div>  	<!--end content-->
   </div>		<!--end content-body-->
