--- a/work.html
+++ b/work.html
@@ -49,6 +49,17 @@
 		<div id="sidebar">
 			<!-- <p class="blurb"> Hi, my name is Khalila.
 			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p> -->
+  
+  <div id="about-work">
+  <p>I've worked on many types of projects, either design, content, or a combination of the two (or both).  
+Here is a sampling of the types of projects I've done: 
+<ul>
+<li>Holiday cards <span class="digital"> digital </span>)</li>
+<li>Invitations <span class="digital">digital</span> <span class="print">print</span></li>
+<li>PowerPoint presentation templates <span class="digital">digital</span></li>
+</ul>
+</p>
+  </div> <!--end about-work-->
 
 		<div id="skillshapes">
 
