added line to about

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@ may be vocalized as simple as "This doesn't sound/look right" or "I'm not sure w
 I work very well collaboratively and  <span class="highlight-green">I believe that design is a function of communication</span>. Whatever the format, people absorb and 
 react to information more positively when it is beautifully formatted, creatively displayed, and very well-written.  </p>
 <p> In addition to native mastery of English, I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When I'm not creating beautiful
-content and design for other people, I am reading, writing, or going on city hikes. 
+content and design for other people, I am reading, writing, or going on city hikes with my handy camera phone taking photos. 
 </p>
 <p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as a
 all around professional.*
