changed big blurb text

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 <div id="content-body"> 
 
 <div id="big-blurb">
-<p> From conception through execution...</p>
+<p> A Little About Me</p>
 
 
 </div> <!--end big-blurb-->
